# OVL-Configurator

./: CMakeLists.txt  OVL-Config_logo_name.xcf  README.md  digitspinbox.hpp  homewindow.cpp  homewindow.h  homewindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ovl_conf.cpp  ovl_conf.h  ovl_requester.cpp  ovl_requester.h  resources.qrc  tarduinocli.cpp  tarduinocli.h  tasks.cpp  tasks.h  tgzip.cpp  tgzip.h  twget.cpp  twget.h
